update controller unit tests for payment methods